--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
 cython
 cffi
 opencv-python
-scipy==1.1.0
+#scipy==1.1.0
+scipy
 msgpack
 easydict
 matplotlib
 pyyaml
 tensorboardX
 pandas
-pillow==6.2.0
-torch==1.7.0
-torchvision==0.8.0
-numpy==1.17.3 
-tensorboard
+pillow
+#torch==1.7.0
+#torchvision==0.8.0
+numpy==1.20.1
+#tensorboard
+imageio
+flask
+flask_cors
+tqdm
+craft_text_detector
+vietocr==0.3.5
+jellyfish
+wtforms
+yolov5
+sqlalchemy
+faiss-cpu --no-cache
+albumentations
+pyheif
